--- a/sophosbank/pom.xml
+++ b/sophosbank/pom.xml
@@ -14,12 +14,16 @@
 	<name>sophosbank</name>
 	<description>Final project &quot;sophosbank&quot; for Sophos Fullstack bootcamp</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
