adding service implementations, modifying entities and adding basic controllers

--- a/sophosbank/src/main/resources/application.properties
+++ b/sophosbank/src/main/resources/application.properties
@@ -2,15 +2,13 @@ server.servlet.context-path=/api
 server.port=4000
 
 # CONFIGURATION DB
-## default connection pool
-#spring.datasource.hikari.connection-timeout=50000
-#spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.connection.driver_class=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
